# email-agent

./: .gitignore  README.md  agent.py  discord.py  main.py  pyproject.toml  requirements.txt
prompts/: EMAILS.md
src/email_agent/: __init__.py  cli.py  config.py  models.py  service.py
src/email_agent/clients/: __init__.py  gmail_client.py  ollama_client.py
